Adding so many things that i don't even remember what i did

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,7 +2,14 @@
 
 @theme {
   --background-image-result: url('/src/assets/result.png');  
+  --font-lora: "Lora", sans-serif;
+  --font-eb-garamond: "EB Garamond", sans-serif;
+  --font-felipa: "Felipa", sans-serif;
 }
+
+/* body {
+  overflow-y: hidden;
+} */
 
 ::-webkit-scrollbar {
   display: none;
