updating feature animation and button still not working

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,9 @@
   --font-felipa: "Felipa", sans-serif;
 }
 
-/* body {
-  overflow-y: hidden;
-} */
+body {
+  overflow-y: auto;
+}
 
 ::-webkit-scrollbar {
   display: none;
