Finishing menu animation (every button still connect to same page)

--- a/src/styles.css
+++ b/src/styles.css
@@ -7,9 +7,9 @@
   --font-felipa: "Felipa", sans-serif;
 }
 
-body {
-  overflow-y: auto;
-}
+/* #mainDisplay {
+  overflow-y: hidden;
+} */
 
 ::-webkit-scrollbar {
   display: none;
